dataset1235/2025-2/2868285114/users/2053306537/executions/2135592949_3530285078.log
== RUN (2025-08-14 21:40:12)
-- CODE: 
string = ""
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra)string.())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra)string.())
                                                                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra)string.())
                                                                                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 21:40:17)
-- CODE: 
string = ""
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra)string.())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra)string.())
                                                                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra)string.())
                                                                                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
